wrote tg bot first version